force-app/main/default/objects/CustomLog__c/CustomLog__c.object-meta.xml
<CustomObject>
    <label>Custom Log</label>
    <nameField>
        <displayFormat>{000000000}</displayFormat>
        <label>Custom Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Custom Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>