force-app/main/default/objects/CustomLog__c/fields/ActionName__c.field-meta.xml
<CustomField>
    <fullName>ActionName__c</fullName>
    <label>ActionName</label>
    <length>150</length>
    <type>Text</type>
</CustomField>