force-app/main/default/objects/CustomLog__c/fields/TargetObjectId__c.field-meta.xml
<CustomField>
    <fullName>TargetObjectId__c</fullName>
    <label>Target Object Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>